[project]
name = "hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Filip-Povidernyi",email = "p.poviderniy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "hw_08", from = "src"}]


[tool.poetry.group.dev.dependencies]
pydantic = "^2.11.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
